--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div><input type="radio" name="employment" required>
         <label for="employment">Student</label>
         <input type="radio" name="employment" required>
-        <label for="employment">Employee</label></div>
+        <label for="employment">Employee</label></div><br>
     <div><input type="checkbox" id="terms" required>
         <label for="terms">I agree to all the Terms and conditions</label></div>
     <DIV><button type="submit">Signup</button></DIV> 
